--- a/TANK/TANK.vcxproj
+++ b/TANK/TANK.vcxproj
@@ -117,19 +117,26 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="file\FileLoader.cpp" />
+    <ClCompile Include="ground\Ground.cpp" />
     <ClCompile Include="SDL\Event.cpp" />
     <ClCompile Include="SDL\Games.cpp" />
     <ClCompile Include="SDL\Renderer.cpp" />
     <ClCompile Include="SDL\AnimationFactory.cpp" />
+    <ClCompile Include="SDL\Scene.cpp" />
+    <ClCompile Include="SDL\Spirit.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Event.h" />
     <ClInclude Include="FileLoader.h" />
     <ClInclude Include="Games.h" />
+    <ClInclude Include="Ground.h" />
     <ClInclude Include="Renderer.h" />
+    <ClInclude Include="Scene.h" />
     <ClInclude Include="SDL\AnimationFactory.h" />
+    <ClInclude Include="Spirit.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="level" />
     <None Include="libfreetype-6.dll" />
     <None Include="libjpeg-9.dll" />
