--- a/TANK/TANK.vcxproj.filters
+++ b/TANK/TANK.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="SDL\Spirit.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="SDL\Text.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Event.h">
@@ -63,6 +66,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Spirit.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Text.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
