--- a/TANK/TANK.vcxproj
+++ b/TANK/TANK.vcxproj
@@ -124,6 +124,7 @@
     <ClCompile Include="SDL\AnimationFactory.cpp" />
     <ClCompile Include="SDL\Scene.cpp" />
     <ClCompile Include="SDL\Spirit.cpp" />
+    <ClCompile Include="SDL\Text.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Event.h" />
@@ -134,6 +135,7 @@
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SDL\AnimationFactory.h" />
     <ClInclude Include="Spirit.h" />
+    <ClInclude Include="Text.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
