新建了Debug_shop配置

--- a/TANK/TANK.vcxproj.filters
+++ b/TANK/TANK.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="SDL\Text.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ground\Maps.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Event.h">
@@ -69,6 +72,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Text.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ground\Maps.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
