--- a/TANK/TANK.vcxproj.filters
+++ b/TANK/TANK.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="ground\TerrainPool.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ground\Object.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Event.h">
@@ -81,6 +84,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="ground\TerrainPool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ground\Object.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
