--- a/TANK/TANK.vcxproj
+++ b/TANK/TANK.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="file\FileLoader.cpp" />
     <ClCompile Include="ground\Ground.cpp" />
     <ClCompile Include="ground\Maps.cpp" />
+    <ClCompile Include="ground\Object.cpp" />
     <ClCompile Include="ground\TerrainPool.cpp" />
     <ClCompile Include="SDL\Event.cpp" />
     <ClCompile Include="SDL\Games.cpp" />
@@ -180,6 +181,7 @@
     <ClInclude Include="Games.h" />
     <ClInclude Include="Ground.h" />
     <ClInclude Include="ground\Maps.h" />
+    <ClInclude Include="ground\Object.h" />
     <ClInclude Include="ground\TerrainPool.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scene.h" />
