--- a/TANK/TANK.vcxproj
+++ b/TANK/TANK.vcxproj
@@ -201,6 +201,7 @@
     <None Include="SDL2.dll" />
     <None Include="SDL2_image.dll" />
     <None Include="SDL2_ttf.dll" />
+    <None Include="TANK.cd" />
     <None Include="zlib1.dll" />
   </ItemGroup>
   <ItemGroup>
