--- a/TANK/TANK.vcxproj.filters
+++ b/TANK/TANK.vcxproj.filters
@@ -103,6 +103,7 @@
     <None Include="SDL2_ttf.dll" />
     <None Include="zlib1.dll" />
     <None Include="ClassDiagram.cd" />
+    <None Include="TANK.cd" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="simkai.ttf" />
