--- a/TANK/TANK.vcxproj
+++ b/TANK/TANK.vcxproj
@@ -163,10 +163,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="file\FileLoader.cpp" />
+    <ClCompile Include="ground\Entity.cpp" />
     <ClCompile Include="ground\Ground.cpp" />
     <ClCompile Include="ground\Maps.cpp" />
     <ClCompile Include="ground\Object.cpp" />
-    <ClCompile Include="ground\TerrainPool.cpp" />
+    <ClCompile Include="ground\ObjectsPool.cpp" />
     <ClCompile Include="SDL\Event.cpp" />
     <ClCompile Include="SDL\Games.cpp" />
     <ClCompile Include="SDL\Renderer.cpp" />
@@ -180,9 +181,10 @@
     <ClInclude Include="FileLoader.h" />
     <ClInclude Include="Games.h" />
     <ClInclude Include="Ground.h" />
+    <ClInclude Include="ground\Entity.h" />
     <ClInclude Include="ground\Maps.h" />
     <ClInclude Include="ground\Object.h" />
-    <ClInclude Include="ground\TerrainPool.h" />
+    <ClInclude Include="ground\ObjectsPool.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SDL\AnimationFactory.h" />
