--- a/TANK/TANK.vcxproj.filters
+++ b/TANK/TANK.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="games\Tank.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="games\TankFactory.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Event.h">
@@ -96,6 +99,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="games\Tank.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="games\TankFactory.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
