--- a/TANK/TANK.vcxproj
+++ b/TANK/TANK.vcxproj
@@ -100,10 +100,10 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\SDL2_2.0.4\include;D:\SDL2_image_2.0.1\include;D:\SDL2_ttf_2.0.14\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\SDL2_2.0.4\include;D:\SDL2_image-2.0.1\include;D:\SDL2_ttf-2.0.14\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>D:\SDL2_2.0.4\lib\x86;D:\SDL2_image_2.0.1\lib\x86;D:\SDL2_ttf_2.0.14\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\SDL2_2.0.4\lib\x86;D:\SDL2_image-2.0.1\lib\x86;D:\SDL2_ttf-2.0.14\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
