--- a/TANK/TANK.vcxproj
+++ b/TANK/TANK.vcxproj
@@ -163,7 +163,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="file\FileLoader.cpp" />
-    <ClCompile Include="ground\Games.cpp" />
+    <ClCompile Include="games\Games.cpp" />
+    <ClCompile Include="games\Normal.cpp" />
+    <ClCompile Include="games\Player.cpp" />
     <ClCompile Include="ground\Ground.cpp" />
     <ClCompile Include="ground\Maps.cpp" />
     <ClCompile Include="ground\Missile.cpp" />
@@ -184,6 +186,8 @@
     <ClInclude Include="FileLoader.h" />
     <ClInclude Include="Director.h" />
     <ClInclude Include="Games.h" />
+    <ClInclude Include="games\Normal.h" />
+    <ClInclude Include="games\Player.h" />
     <ClInclude Include="ground\Ground.h" />
     <ClInclude Include="ground\Maps.h" />
     <ClInclude Include="ground\Missile.h" />
@@ -209,6 +213,10 @@
     <None Include="SDL2_image.dll" />
     <None Include="SDL2_ttf.dll" />
     <None Include="TANK.cd" />
+    <None Include="TANK.dat">
+      <DeploymentContent>true</DeploymentContent>
+      <FileType>Manifest</FileType>
+    </None>
     <None Include="zlib1.dll" />
   </ItemGroup>
   <ItemGroup>
