--- a/TANK/TANK.vcxproj.filters
+++ b/TANK/TANK.vcxproj.filters
@@ -42,9 +42,6 @@
     <ClCompile Include="menus\StartMenu.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="ground\Games.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="ground\Ground.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -61,6 +58,15 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="ground\TankFactory.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="games\Games.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="games\Normal.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="games\Player.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -116,6 +122,12 @@
     <ClInclude Include="ground\Tank.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="games\Normal.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="games\Player.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="libfreetype-6.dll" />
@@ -129,6 +141,7 @@
     <None Include="zlib1.dll" />
     <None Include="ClassDiagram.cd" />
     <None Include="TANK.cd" />
+    <None Include="TANK.dat" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="simkai.ttf" />
