--- a/TANK/TANK.vcxproj.filters
+++ b/TANK/TANK.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="games\Player.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="games\AI.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Event.h">
@@ -126,6 +129,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="games\Player.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="games\AI.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
