--- a/TANK/TANK.vcxproj.filters
+++ b/TANK/TANK.vcxproj.filters
@@ -146,4 +146,7 @@
   <ItemGroup>
     <Font Include="simkai.ttf" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="状态菜单布局.txt" />
+  </ItemGroup>
 </Project>
