--- a/TANK/TANK.vcxproj
+++ b/TANK/TANK.vcxproj
@@ -173,6 +173,7 @@
     <ClCompile Include="ground\Tank.cpp" />
     <ClCompile Include="ground\TankFactory.cpp" />
     <ClCompile Include="menus\StartMenu.cpp" />
+    <ClCompile Include="menus\StateMenu.cpp" />
     <ClCompile Include="SDL\EventInterface.cpp" />
     <ClCompile Include="SDL\Director.cpp" />
     <ClCompile Include="SDL\Renderer.cpp" />
@@ -199,6 +200,7 @@
     <ClInclude Include="SDL\AnimationFactory.h" />
     <ClInclude Include="Spirit.h" />
     <ClInclude Include="StartMenu.h" />
+    <ClInclude Include="StateMenu.h" />
     <ClInclude Include="TANKS.h" />
     <ClInclude Include="Text.h" />
   </ItemGroup>
