--- a/TANK/TANK.vcxproj.filters
+++ b/TANK/TANK.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="menus\StateMenu.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="DebugView.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Event.h">
@@ -132,6 +135,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="StateMenu.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DebugView.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
